[tool.poetry]
name = "hardware"
version = "0.1.0"
description = ""
authors = ["joe-sacco <joesacco@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
adafruit-python-shell = "^1.3.3"
adafruit-circuitpython-dht = "^3.7.7"
"RPi.GPIO" = "^0.7.1"
requests = "^2.28.1"
fastapi = "^0.82.0"
cors = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-dotenv = "^0.21.0"
pygame = "^2.1.2"
python-socketio = {version = "^5.7.1", extras = ["client"]}
aiohttp = "^3.8.3"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
